2006-10-31  Brian Bidulock  <bidulock@openss7.org>

	* src/include/sys/os7/timer.h: timeout must lock the queue lock and not
	  the structure lock to avoid timer procedures running concurrent with
	  put or service routines.
	* src/kernel/os7compat.c: the timeout is a toid_t (int) not a ulong.

2006-10-30  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: added ability to sync between test cases

	* acinclude.m4: include check for linux/compile.h
	* src/include/sys/os7/compat.h: include linux/utsrelease if available
	* src/kernel/liscompat.c: fix a few versions, remove includes contained in compat.h

2006-10-27  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4:
	  - change linux/config.h to autoconf.h for 2.6.18
	  - checks for header files from Linux Fast-STREAMS
	* src/include/sys/os7/compat.h:
	  - change linux/config.h to autoconf.h for 2.6.18
	  - include config file for finding UTS_RELEASE
	  - include linux/utsrelease.h when available
	* src/include/sys/strcompat/config.h.in:
	  - add result of check for linux/utsrelease.h
	* src/kernel/liscompat.c:
	  - include linux/utsrelease.h when available

2006-10-21  Brian Bidulock  <bidulock@openss7.org>

	* strcompat.lsm.in: updated streams release number
	* debian/control.in: updated streams release number
	* doc/man/strcompat.refs: updated streams release number
	* doc/manual/releases.texi: updated streams release number
	* doc/manual/strcompat.texi: updated streams release number

	* debian/control.in: updated LiS release number
	* doc/manual/releases.texi: updated LiS release number
	* src/kernel/lfscompat.c: updated LiS release number
	* src/util/init/strcompat: updated LiS release number

2006-10-12  Brian Bidulock  <bidulock@openss7.org>

	* src/include/sys/os7/bufpool.h: removed redundant debug flags
	* src/include/sys/os7/debug.h: removed redundant debug flags
	* src/include/sys/strcompat/config.h.in: removed redundant debug flags
	* src/kernel/lfscompat.c: removed redundant debug flags