@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $Id: queue.h,v 0.9.2.11 2006/04/24 05:00:46 brian Exp $
+ @(#) $Id: queue.h,v 0.9.2.12 2006/11/02 12:50:04 brian Exp $
 
  -----------------------------------------------------------------------------
 
@@ -44,14 +44,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2006/04/24 05:00:46 $ by $Author: brian $
+ Last Modified $Date: 2006/11/02 12:50:04 $ by $Author: brian $
 
  *****************************************************************************/
 
 #ifndef __OS7_QUEUE_H__
 #define __OS7_QUEUE_H__
 
-#ident "@(#) $RCSfile: queue.h,v $ $Name:  $($Revision: 0.9.2.11 $) Copyright (c) 2001-2006 OpenSS7 Corporation."
+#ident "@(#) $RCSfile: queue.h,v $ $Name:  $($Revision: 0.9.2.12 $) Copyright (c) 2001-2006 OpenSS7 Corporation."
 
 #define QR_DONE		0
 #define QR_ABSORBED	1
@@ -65,7 +65,9 @@
 
 extern int streamscall ss7_w_flush(queue_t *q, mblk_t *mp);
 extern int streamscall ss7_r_flush(queue_t *q, mblk_t *mp);
-extern int streamscall ss7_putq(queue_t *q, mblk_t *mp, int streamscall (*proc) (queue_t *, mblk_t *));
+extern int streamscall ss7_putq(queue_t *q, mblk_t *mp,
+				int streamscall (*proc) (queue_t *, mblk_t *),
+				void streamscall (*wakeup) (queue_t *));
 extern int streamscall ss7_srvq(queue_t *q, int streamscall (*proc) (queue_t *, mblk_t *),
 				void streamscall (*wakeup) (queue_t *));
 extern int streamscall ss7_oput(queue_t *q, mblk_t *mp);
