@@ -1,3 +1,8 @@
+2006-11-02  Brian Bidulock  <bidulock@openss7.org>
+
+	* src/include/sys/os7/queue.h: put procedure needs to call wakeup
+	* src/kernel/os7compat.c: put procedure needs to call wakeup
+
 2006-10-31  Brian Bidulock  <bidulock@openss7.org>
 
 	* src/include/sys/os7/timer.h: timeout must lock the queue lock and not
